# adventofcode

./: README.md  pyproject.toml  tox.ini
adventofcode/aoc2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py
adventofcode/aoc2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py
adventofcode/aoc2023/: day01.py  day02.py  day03.py  day04.py  day05.py
adventofcode/tools/: input.py  run.py  scripts.py  skeleton.py
adventofcode/utils/: helpers.py  input.py  iterable.py  skeleton.py
tests/aoc2021/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py
tests/aoc2022/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py
tests/aoc2023/: test_day01.py  test_day02.py  test_day03.py  test_day04.py
