[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "https://adventofcode.com/"
authors = ["Simon Keith <simon.keith@shippeo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
