[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "https://adventofcode.com/"
authors = ["Simon Keith <simon.keith@shippeo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^0.991"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
pep8-naming = "^0.13.2"
ipython = "^8.7.0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skeleton = 'adventofcode.tools.scripts:skeleton'
solve = 'adventofcode.tools.scripts:solve'
timeit = 'adventofcode.tools.scripts:timeit'

[tool.isort]
profile = "black"
force_single_line = true

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
