[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "https://adventofcode.com/"
authors = ["Simon Keith <simon.keith@shippeo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
flake8-bugbear = "^23.3.23"
flake8-builtins = "^2.1.0"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
flake8-docstrings = "^1.7.0"
ipython = "^8.12.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skeleton = 'adventofcode.tools.scripts:skeleton'
solve = 'adventofcode.tools.scripts:solve'
timeit = 'adventofcode.tools.scripts:timeit'

[tool.isort]
profile = "black"
force_single_line = true

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=adventofcode"
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true
